# learn-axum

./: .gitignore  Cargo.toml
migrations/: 20250927084404_create-updateAt-func.down.sql  20250927084404_create-updateAt-func.up.sql  20250927085446_create-commander.down.sql  20250927085446_create-commander.up.sql  20250927090637_create-troop.down.sql  20250927090637_create-troop.up.sql  20250927095816_seed-commander.down.sql  20250927095816_seed-commander.up.sql
src/: main.rs
src/controllers/: mod.rs
src/errors/: mod.rs
src/models/: mod.rs
src/views/: add_troop.html  getCommanders.html  index.html  troops.html
