[package]
name = "learn-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "*", features = ["macros", "tokio"] }
axum-template = { version = "3.0.0", features = [
    "minijinja",
    "minijinja-autoreload",
] }
dotenvy = "0.15.7"
minijinja = { version = "*", features = ["loader"] }
minijinja-autoreload = "2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "*", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
chrono = { version = "*", features = ["serde"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
